# acoustic-backup-v2

./: Cargo.toml  db.sqlite3
src/: api.rs  command_handlers.rs  main.rs  socket_handlers.rs
src/db/: client.rs  mod.rs  mongo.rs  sqlite.rs
src/download/: downloader.rs  mod.rs  spotify.rs  utils.rs  youtube.rs
src/models/: models.rs
src/scripts/: after_install.sh  before_install.sh  start_server.sh  stop_server.sh
src/shazam/: fft.rs  filter.rs  fingerprint.rs  image.rs  mod.rs  shazam.rs  shazam_init.rs  spectrogram.rs
src/utils/: helpers.rs  logger.rs  mod.rs  utils.rs
src/wav/: convert.rs  mod.rs  wav.rs
