[package]
name = "acousti-scan-rs"
version = "0.1.0"
edition = "2024"

[features]
mongodb = []

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.10.2"
anyhow = "1.0.97"
audrey = "0.3.0"
axum = "0.8.1"
backtrace = "0.3.74"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dasp = { version = "0.11.0", features = ["signal", "interpolate"] }
env_logger = "0.11.6"
futures = "0.3.31"
hound = "3.5.1"
image = "0.25.5"
log = "0.4.26"
mongodb = "3.2.2"
num-complex = "0.4.6"
num_cpus = "1.16.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = {version ="0.12.12", features=["blocking"]}
rusqlite = "0.32.0"
rustfft = "6.2.0"
rustls = "0.23.23"
scopeguard = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
slog = "2.7.0"
slog-json = "2.6.1"
sqlx = { version = "0.8.3", features = ["sqlite"] }
tempfile = "3.18.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tokio-rustls = "0.26.2"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
